src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>BST_BOOST_Product_ID__c</fullName>
        <displayFormat>P-{00000}</displayFormat>
        <label>BOOST Product ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BST_Product_P1__c</fullName>
        <defaultValue>1</defaultValue>
        <description>BST - This field is used for analytics</description>
        <label>Product P1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BXGO_Baxter_Product_Code__c</fullName>
        <externalId>true</externalId>
        <label>Baxter Product Code</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BXGO_COGS__c</fullName>
        <label>COGS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BXGO_Franchise_MGP__c</fullName>
        <label>Franchise MGP</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BXGO_UPI_C__c</fullName>
        <label>UPI_C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <recordTypes>
        <fullName>BXGO_Official_Product</fullName>
        <active>true</active>
        <label>BXGO_Official_Product</label>
    </recordTypes>
</CustomObject>